test_data/Xml/Unexpected/Unserializable/InvalidClassName/resource/wrong.xml.exception
Expected an element representing an instance of class Resource with element name resource, but got: utterlyInvalid at: the beginning